# frost

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README-ko_kr.md  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py
app/admin/: __init__.py  mail_test.py  project_modelview.py  response_case.py  token_revoke.py
app/api/: __init__.py  helper_class.py  project_route.py  request_handler.py  response_case.py
app/api/account/: __init__.py  account_manage.py  deactivate.py  duplicate_check.py  email_action.py  password_change.py  password_reset.py  profile_img_manage.py  refresh.py  response_case.py  signin.py  signout.py  signup.py
app/api/common/: file_manage.py  ping.py
app/api/debug/: __init__.py
app/common/: firebase_notify.py
app/common/cli_tools/: __init__.py  db_erd_draw.py  db_operation.py  openapi_support.py  shell_plus.py
app/common/mailgun/: __init__.py  aws_ses.py  gmail.py
app/common/utils/: __init__.py  pmmod.py
app/database/: __init__.py  board.py  jwt.py  project_table.py  uploaded_file.py  user.py
app/database/migrations/: env.py
app/database/migrations/versions/: 65933120c1fc_initial_migration_for_frost.py
app/plugin/: __init__.py
app/static/debug/: email.html  signin.html  upload.html
app/static/template/admin/: token_revoke.html
app/static/template/admin/error/: admin_forbidden.html  admin_token_expired.html  admin_token_invalid.html
app/static/template/email/: email_verify.html  password_reset.html
app/static/template/email_action/: email_action_success.html  password_reset.html
app/static/template/email_action/error/: email_token_expired.html  email_token_invalid.html  email_token_not_found.html  email_token_not_given.html
app/worker/: __init__.py  project_worker.py
batch_task/: cron_setup.sh
batch_task/cron.d/: crontab
docker/: Dockerfile  supervisord.ini
docker/celery/: celery.ini
docker/nginx/: nginx.conf
docker/nginx/conf.d/: default.conf
docker/nginx/frontend/: index.html
docker/nginx/templates/: frost.conf.template
env_collection/: dev.json  docker_dev.json  env_creator.py  minimal.json
env_collection/template/: launch.json
